[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/spark_05.png" type="Texture" id=1]
[ext_resource path="res://Lightning.gd" type="Script" id=2]
[ext_resource path="res://assets/spark_02.png" type="Texture" id=3]
[ext_resource path="res://assets/spark_01.png" type="Texture" id=4]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 10, 50, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 30.0
angle_random = 1.0
scale_random = 0.4

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 800, 5, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_hdr_threshold = 1.5

[node name="Lightning" type="Node2D"]
script = ExtResource( 2 )

[node name="main lightning" type="Particles2D" parent="."]
modulate = Color( 1.6, 1.6, 1.6, 1 )
position = Vector2( 512, 50 )
scale = Vector2( 0.5, 1 )
z_as_relative = false
emitting = false
amount = 2
lifetime = 0.3
one_shot = true
explosiveness = 0.4
process_material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="main lightning2" type="Particles2D" parent="."]
modulate = Color( 1.6, 1.6, 1.6, 1 )
position = Vector2( 512, 50 )
scale = Vector2( 0.7, 1 )
z_as_relative = false
emitting = false
amount = 2
lifetime = 0.3
one_shot = true
explosiveness = 0.4
process_material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="short lightning" type="Particles2D" parent="."]
modulate = Color( 1.6, 1.6, 1.6, 1 )
position = Vector2( 512, -50 )
z_as_relative = false
emitting = false
amount = 1
lifetime = 0.2
one_shot = true
randomness = 0.4
process_material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="short lightning2" type="Particles2D" parent="."]
modulate = Color( 1.6, 1.6, 1.6, 1 )
position = Vector2( 512, -50 )
z_as_relative = false
emitting = false
amount = 1
lifetime = 0.2
one_shot = true
randomness = 0.4
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="main lightning timer" type="Timer" parent="."]

[node name="cloud lightning timer" type="Timer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[connection signal="timeout" from="main lightning timer" to="." method="_on_main_lightning_timer_timeout"]
[connection signal="timeout" from="cloud lightning timer" to="." method="_on_cloud_lightning_timer_timeout"]
